// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Channels API should handle DB errors gracefully 1`] = `
Object {
  "error": "Failed to fetch channels",
}
`;

exports[`Channels API should return 405 for non-GET requests 1`] = `
Object {
  "error": "Method not allowed",
}
`;
